chore: embed livemap-ios-sdk as a cocoapod

--- a/livemap-ios-sdk-sample/Info.plist
+++ b/livemap-ios-sdk-sample/Info.plist
@@ -36,10 +36,16 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is required to use main functions. We will not distribute or store this information.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location is required to use main functions. We will not distribute or store this information.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location is required to use main functions. We will not distribute or store this information.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone is required to use Augmented Reality.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera is required to use Augmented Reality.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Bluetooth is required to use indoor location. We will not distribute or store this information.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
