chore: ignore livemap-ios-sdk-sample.xcworkspace/xcuserdata from git

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 livemap-ios-sdk-sample.xcodeproj/project.xcworkspace/xcuserdata/
 livemap-ios-sdk-sample.xcodeproj/xcuserdata/
+livemap-ios-sdk-sample.xcworkspace/xcuserdata/
 
 Pods/
